--- a/client/src/components/AddTask.module.css
+++ b/client/src/components/AddTask.module.css
@@ -1,5 +1,23 @@
 .addTask {
-  grid-column: 9/-1;
-  height: 100%;
-  background-color: #ababab;
+  position: fixed;
+  width: 500px;
+  height: 600px;
+  background: #fff;
+  /* height: 100%; */
+  /* background-color: #ababab; */
+  margin: auto;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border-radius: 1rem;
+}
+
+.modalBackdrop {
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.7);
 }
