--- a/client/src/pages/SignUp.module.css
+++ b/client/src/pages/SignUp.module.css
@@ -1,14 +1,32 @@
 .container {
   width: 100%;
-  display: grid;
-  grid-template-columns: 2fr 3fr;
+  /* display: grid;
+  grid-template-columns: 2fr 3fr; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 100vh;
   padding: 1rem;
 }
 
+.wrapper {
+  max-width: 1200px;
+  display: grid;
+  grid-template-columns: 2.5fr 3fr;
+  width: 100%;
+  height: 100%;
+}
+
 .card {
-  background-color: #000;
+  /* background-color: #000; */
   border-radius: 1.4rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.image {
+  width: 85%;
 }
 
 .formContainer {
